[workspace]
resolver = "2"
members = [
    # "rustnom",
    #
    # ---- rust std lib ----
    # "ruststd/modalloc",
    # "ruststd/modmem",
    # "ruststd/modops",
    # "ruststd/modptr",
    # "ruststd/modpin",
    # "ruststd/modany",
    # "ruststd/modbacktrace",
    # "ruststd/modascii",
    # "ruststd/modarray",
    # "ruststd/modborrow",
    # "ruststd/modboxed",
    # "ruststd/modcell",
    # "ruststd/modcmp",
    # "ruststd/modcollections",
    # "ruststd/modhash",
    # "ruststd/modprocess",
    # "ruststd/modpanic",
    # "ruststd/modsync",
    # "ruststd/moderror",
    # "ruststd/modthread",
    # "ruststd/typointer",
    # "ruststd/tychar",
    # "rustrefer/ch10type",
    # "toomanylist",
    # "ruststd/modtry",
    #
    # ---- some official crate ----
    # "official/dlibc",
    #
    # ---- async, io, network ----
    # "dfutures",
    # "dtokio/dtokio",
    # "dtokio/dhyper",
    # "dtokio/dtower",
    # "dtokio/dtracing",
    # "dtokio/daxum",
    # "dtokio/dh2",
    # "dtokio/dh3",
    # "dtokio/dtonic",
    # "dtokio/dbytes",
    # "dtokio/dmio",
    # "dtokio/dproject",
    # "dtokio/diouring",
    # "dtokio/dtokiouring",
    # "dactor",
    # "dpingora",
    # "dtls/drustls",
    # "dtls/dnativetls",
    # "dhttp/dquiche",
    #
    # ---- ERROR ----
    # "danyhow",
    # "dthiserror",
    #
    # ---- LOG ----
    # "dlog",
    #
    # ---- MACRO ----
    # "dmacro/dfunclike/lazystatic",
    # "dmacro/dfunclike/lazystatic_test",
    # "dmacro/dderive/heapsize",
    # "dmacro/dderive/heapsize_derive",
    # "dmacro/dderive/heapsize_test",
    # "dmacro/dattribute/tracevar",
    # "dmacro/dattribute/tracevar_test",
    # "dmacro/dsyn",
    # "dmacro/dtest",
    # "dcrossbeam",
    #
    # ---- WASM ----
    # "dwasmtime/hello-world",
    # "dwasmtime/mdp",
    # "dwasmtime/embed",
    # "dwasmedge/helloword",
    #
    # ---- UI, WEB ----
    # "dreqwest",
    # "drocket",
    # "dmonoio",
    # "drayon",
    # "dserde",
    # "ddioxus/dguide",          # https://dioxuslabs.com/learn/0.4/reference
    # "ddioxus/drefer/dcontext",
    # "ddioxus/drefer/drender",
    # "ddioxus/drefer/dfuture",
    # "ddioxus/drouter/dfirst",
    # "ddioxus/bookcn",          # https://www.dioxus.cn/docs/intro
    # "diced",
    # ---- DB ----
    # "dsqlx",
    # ---- CLI ----
    # "dcli/dstructopt",
    "dcli/dclap",
    "dcli/dratatui",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# opt-level = 'z'
# lto = true
# strip = true
# codegen-units = 1
# panic = 'abort'
# debug-assertions = false
# incremental = false
# overflow-checks = false
# debug = false
# rpath = false
