[package]
name = "dguide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
dioxus = "0.4.0"
dioxus-web = "0.4.0"
serde = { version = "1.0.188", features = ["serde_derive"] }
futures = "0.3.28"
reqwest = { version = "0.11.20", features = ["json"] }
serde_json = "1.0.107"
async-recursion = "1.0.5"
