[package]
name = "todos"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12.1", features = ["async-std", "debug"] }
once_cell = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = { version = "1.0" }
directories-next = "2.0"
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { version = "0.12.1", features = ["webgl", "debug"] }
uuid = { version = "1.0", features = ["js"] }
web-sys = { version = "0.3.67", features = ["Window", "Storage"] }
wasm-timer = { version = "0.2" }

[package.metadata.deb]
assets = [
    [
        "target/release-opt/todos",
        "usr/bin/iced-todos",
        "755",
    ],
    [
        "iced-todos.desktop",
        "usr/share/applications/",
        "644",
    ],
]
