[package]
name = "tour"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12.1", features = ["image", "debug"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { version = "0.12.1", features = ["image", "debug", "webgl"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
