[package]
name = "drustls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.23.2"
rustls-pemfile = "2.1.1"
webpki-roots = "0.26.1"
clap = { version = "4.3.21", features = ["derive", "env"] }
rcgen = "0.13.2"
env_logger = "0.11.6"
