[package]
name = "daxum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.13", features = ["ws", "headers"] }
tower = { version = "0.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
tower-http = { version = "0.3.4", features = ["full"] }
pin-project-lite = "0.2.9"
