[package]
name = "dh2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
env_logger = "0.11.3"
h2 = "0.4.4"
http = "1.1.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-rustls = "0.26.0"
webpki-roots = "0.26.1"
