[package]
name = "dhyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = { version = "0.4", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = { version = "0.5.0" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = "1"
serde_json = "1"
url = "2.2"
pretty_env_logger = "0.4"
