[package]
name = "dtower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = { version = "0.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pin-project-lite = "0.2"
hyper = { version = "0.14", features = ["full"] }
futures = { version = "0.3" }
tokio-util = { version = "0.7" }
